stop name from wrapping

--- a/src/stylesheets/desktop/desktop_titlebar.scss
+++ b/src/stylesheets/desktop/desktop_titlebar.scss
@@ -5,6 +5,7 @@
   color:--MAIN-TEXT-COLOR--;
   margin:0;
   text-align: left;
+  white-space: nowrap;
 }
 
   
